test/positive/lib/helpers.mut
extern string

def add(a: i64, b: i64) -> i64
    return a + b
end

def greet(name: str) -> str
    return string.concat("Hello, ", name)
end
